css/default.css
/* ... */
.disclosure-button:hover {
    --button-color: var(--GW-collapse-disclosure-button-hover-color);

    z-index: 11;
}
.disclosure-button:focus {
    outline: none;
}
/*
.disclosure-button:checked {
    pointer-events: none;
}
.disclosure-button:checked::before,
.disclosure-button:checked::after {
    pointer-events: auto;
}
 */

/*  Top and bottom parts of disclosure button.
 */
.disclosure-button::before,
.disclosure-button::after {
    background-color: var(--button-color);
    transition:
        color 0.1s ease,
        background-color 0.1s ease;
}

/*  Top part of disclosure button.
 */
.disclosure-button::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 3rem;
    text-align: right;
    color: var(--GW-collapse-disclosure-button-top-part-text-color);
    padding: 1rem 3rem 0.75rem 3rem;
    background-image: var(--GW-svg-chevron-left);
    background-repeat: no-repeat;
    background-position: calc(100% - 1rem) 0.625rem;
    background-size: auto 1.5rem;
    box-sizing: border-box;
}
.disclosure-button:hover::before {
    background-image: var(--GW-svg-chevron-left-hover);
    color: var(--GW-collapse-disclosure-button-text-hover-color);
}
.disclosure-button:checked::before {
    content: "Click to collapse";
    background-image: var(--GW-svg-chevron-down);
    background-position: calc(100% - 0.75rem) 0.75rem;
}
.disclosure-button:checked:hover::before {
    background-image: var(--GW-svg-chevron-down-hover);
}

/*  Bottom part of disclosure button.
 */
.disclosure-button::after {
    width: 100%;
    height: 2rem;
    position: absolute;
    text-align: center;
    pointer-events: none;
    content: "Click to expand";
    color: var(--GW-collapse-disclosure-button-bottom-part-text-color);
    text-decoration: underline;
    text-underline-offset: 3px;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}
.disclosure-button:hover::after {
    color: var(--GW-collapse-disclosure-button-text-hover-color);
}
.disclosure-button:checked::after {
    content: "Click to collapse";
}

/************************************************/
/*  Collapsible sections (the <section> element).
 */
section.collapse {
    padding-left: 1em;
    margin: 2.5em 0 2.25em -1em;
}
section.collapse > *:first-child {
    margin-top: 0;
    position: relative;
    z-index: 12;
    pointer-events: none;
    margin-left: -0.5rem;
}
section.collapse > :first-child a::after {
    top: -0.1em;
    left: 0.5em;
}
section.collapse > h1:first-child {
    margin-bottom: 0.375em;
}
section.collapse > h2:first-child {
    line-height: 1.75;
}
section.collapse > h2:first-child::after {
    content: none;
}
section.collapse > h1:first-child,
section.collapse > h2:first-child,
section.collapse > h3:first-child,
section.collapse > h4:first-child,
section.collapse > h5:first-child,
section.collapse > h6:first-child {
    height: 3rem;
    margin-bottom: 0;
    padding: 0;
}
section.collapse > *:first-child a {
    text-shadow: none;
}
section.collapse > :first-child > a {
    pointer-events: auto;
    position: relative;
}

/**********************************/
/*  Collapsible non-section blocks.
 */
:not(section).collapse {
    margin-left: -1em;
}
:not(section).collapse:not(.expanded) {
    padding: 0 0 0 1em;
}
:not(section).collapse:not(.expanded) > .collapse-content-wrapper {
    max-height: 5rem;
}

:not(section).collapse:not(.expanded) > .disclosure-button {
    --button-color: var(--GW-collapse-disclosure-button-color-15-percent-transparent);

    background-color: var(--button-color);
}
:not(section).collapse > .disclosure-button {
    transition:
        box-shadow 0.1s ease,
        color 0.1s ease,
        background-color 0.1s ease;
}
:not(section).collapse:not(.expanded) > .disclosure-button:hover {
    --button-color: var(--GW-collapse-disclosure-button-hover-color-15-percent-transparent);
}
:not(section).collapse:not(.expanded) > .disclosure-button::before,
:not(section).collapse:not(.expanded) > .disclosure-button::after {
    --button-color: var(--GW-collapse-disclosure-button-color);
}
:not(section).collapse:not(.expanded) > .disclosure-button:hover::before,
:not(section).collapse:not(.expanded) > .disclosure-button:hover::after {
    --button-color: var(--GW-collapse-disclosure-button-hover-color);
}
:not(section).collapse:not(.expanded) > .disclosure-button::before {
    width: 3rem;
    height: 3rem;
    padding: 0;
    top: 0;
    right: 0;
    background-position: calc(100% - 1rem) 0.75rem;
}
:not(section).collapse:not(.expanded) > .disclosure-button::after {
    width: 10em;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
}
:not(section).collapse:not(.expanded) > .disclosure-button {
    box-shadow: none;
}
:not(section).collapse.expanded {
    padding-top: 3.5rem;
    padding-bottom: 2.5rem;
    padding: 3.5rem 0 2.5rem 1em;
}

:not(section).collapse:not(.expanded) .abstract-collapse:not(.abstract) {
    margin: 0.5em 0;
}

/***************************/
/*  Collapsible code blocks.
 */

.sourceCode {
    clear: both;
}

.sourceCode.collapse {
    margin: 1.75em 0;
}
.sourceCode.collapse .collapse-content-wrapper pre {
    margin: 0;
}
.sourceCode.collapse:not(.expanded) {
    padding: 0;
}
.sourceCode.collapse.expanded {
    margin-left: -1em;
}
.sourceCode.collapse:not(.expanded) .collapse-content-wrapper pre {
    max-height: 5rem;
    box-sizing: border-box;
    overflow: hidden;
}

.sourceCode.collapse:not(.expanded) .collapse-content-wrapper.width-full {
    max-width: 100%;
    margin: 0 !important;
}

.sourceCode.collapse:not(.expanded) > .disclosure-button {
    --button-color: var(--GW-collapse-disclosure-button-color-30-percent-transparent);
}
.sourceCode.collapse:not(.expanded) > .disclosure-button:hover {
    --button-color: var(--GW-collapse-disclosure-button-hover-color-30-percent-transparent);
}
.sourceCode.collapse:not(.expanded) > .disclosure-button::before {
    top: 1px;
    right: 1px;
}
/* ... */

